// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrowsersChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Web Browsers
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the web browser used by the user to access the site.
        </span>
      </span>
    </a>
    <a
      aria-label="browsers.csv"
      href="http://www.example.com/data//browsers.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    >
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Chrome
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          48.7%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 49%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Safari
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          35.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 36%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Edge
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          8.8%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 9%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Firefox
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Safari (in-app)
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.9%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Samsung Internet
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.4%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Android Webview
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Opera
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.2%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Amazon Silk
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis margin-right-8"
        >
          Internet Explorer
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`BrowsersChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Web Browsers
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the web browser used by the user to access the site.
        </span>
      </span>
    </a>
    <a
      aria-label="browsers.csv"
      href="http://www.example.com/data//browsers.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;

exports[`BrowsersChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_browser"
    >
      <span
        class="usa-tooltip"
      >
        <span
          aria-describedby="tooltip-550000"
          class="usa-tooltip__trigger"
          data-position="top"
          tabindex="0"
        >
          Web Browsers
        </span>
        <span
          aria-hidden="true"
          class="usa-tooltip__body"
          id="tooltip-550000"
          role="tooltip"
        >
          The name of the web browser used by the user to access the site.
        </span>
      </span>
    </a>
    <a
      aria-label="browsers.csv"
      href="http://www.example.com/data//browsers.csv"
    >
      <svg
        aria-hidden="true"
        class="usa-icon margin-bottom-neg-05 margin-left-05"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="/assets/uswds/img/sprite.svg#file_present"
        />
      </svg>
    </a>
  </div>
  <figure
    id="chart_browsers"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    />
  </figure>
</DocumentFragment>
`;
